    * 3447 mssql_versions: Added inventory plugin for MSSQL instances
    * 3581 mssql_versions: Added product name to inventory information
    * 3585 Implemented API for exporting the full host inventory...
    * 3591 mssql_clusters: Added information about nodes to MSSQL instance inventory
    * 3550 HW/SW inventory: Now able to raise an alert when SW packages info is missing...
    * 3219 FIX: lnx_distro: Now detecting Oracle VM Server correctly
    * 3229 FIX: lnx_distro: SLES based systems have now an OS name inventorized\
    * 3265 FIX: mk_inventory.solaris: fix problem on Solaris 10, do prtdiag and prtpicl only in global zone
    * 3289 FIX: Fixed missing filters in HW-/SW-Inventory views after editing the view...
    * 3013 FIX: Inventory: snmp inventory plugins never use cached data...
    * 3340 FIX: Fixed exception when searching for software package sizes
    * 3025 FIX: solaris_pkginfo: the last element of the reported software package list was always missing
    * 3526 FIX: Inventory scripts are no longer called when no data is available for their section...
    * 3455 FIX: Fixed broken switch port filtering/sorting view
    * 3663 FIX: Added missing system manufacturer filter/painter
    * 3664 FIX: Fixed not working hardware/system serial and model painters and filters...
    * 3811 FIX: HW/SW Inventory: Fixed GUI display crash when querying data from older software versions...
    * 3882 FIX: mk_inventory.linux: fixed wrong graphic card section name


1.2.8b1:
    Core & Setup:
    * 2771 Errors in Check_MK configuration do not prevent the core from being restarted anymore...
    * 2881 Automatically restart core instead of reload after changes in local check plugins...
    * 3039 Added more useful debugging infos to crash reports...
    * 2682 FIX: Fixed exception Error creating configuration: global name 'extra_host_attributes' is not defined
    * 2443 FIX: Fixed quoting of ! in classical nagios checks configured via WATO...